[Navigation] Fix item secondary action wrapping

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -73,7 +73,6 @@ $disabled-fade: 0.6;
 }
 
 .Badge {
-  margin-right: spacing(extra-tight);
   margin-left: spacing(tight);
 }
 
@@ -89,7 +88,12 @@ $disabled-fade: 0.6;
   max-width: calc(
     100% - #{nav(icon-size) + spacing() * 2 + spacing(extra-tight)}
   );
-  padding-right: 0;
+}
+
+.ItemWrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
 }
 
 .Text {
